--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,130 @@
-body {
-  background-color: red;
+p,
+h1 {
+  margin: 0;
+}
+
+.container {
+  margin: 0 auto;
+  padding-left: 5px;
+  padding-right: 5px;
+  max-width: 320px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    padding-left: 10px;
+    padding-right: 10px;
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px !important;
+  }
+}
+
+.section {
+  background-image: linear-gradient(
+      0deg,
+      rgba(33, 150, 243, 0.6),
+      rgba(33, 150, 243, 0.6)
+    ),
+    url('https://eln-app-web-server.onrender.com/bg-image.jpg');
+  height: 100%;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+.logo {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  align-items: center;
+}
+
+.icon-container {
+  width: 120px;
+  height: 120px;
+}
+@media screen and (min-width: 768px) {
+  .icon-container {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+.icon-container > svg {
+  width: 100%;
+  height: 100%;
+}
+
+.logo_text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-weight: 700;
+  font-size: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo_text-container {
+    font-size: 30px;
+  }
+}
+
+.logo_text-container > .logo_text-line > .logo_capital-letter {
+  font-size: 25px;
+  color: #bcd30e;
+}
+@media screen and (min-width: 768px) {
+  .logo_text-container > .logo_text-line > .logo_capital-letter {
+    font-size: 30px;
+  }
+}
+
+.title {
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.paragraph {
+  font-size: 20px;
+  text-align: center;
+}
+
+.paragraph.outer {
+  margin-bottom: 20px;
+}
+
+.link {
+  font-size: 20px;
+  text-align: center;
+  display: block;
+  text-decoration: none;
+}
+
+.link-paragraph {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .link-paragraph {
+    flex-direction: row;
+  }
 }
